src/objects/TestObject__c.object
<CustomObject>
    <fields>
        <fullName>Clone_Record_Id__c</fullName>
        <label>Clone Record Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_cloned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is cloned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Record_Id__c</fullName>
        <label>Original Record Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Record__c</fullName>
        <label>Parent Record</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_User_email__c</fullName>
        <label>Staff User email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test_Two__c</fullName>
        <label>Test Two</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <label>Test</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>TestObject</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TO-{0000}</displayFormat>
        <label>Testobject Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TestObjects</pluralLabel>
    <recordTypes>
        <fullName>Test</fullName>
        <active>true</active>
        <label>Test</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>